--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.hbb20:ccp:2.5.3'
+    implementation 'com.chaos.view:pinview:1.4.4'
 }
