--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.20UIYoParker">
-        <activity android:name=".Phone"></activity>
+        <activity android:name=".Verification"></activity>
+        <activity android:name=".Phone" />
         <activity android:name=".Locations" />
         <activity android:name=".Splash">
             <intent-filter>
