--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.20UIYoParker">
-        <activity android:name=".Edit_Profile_1"></activity>
+        <activity android:name=".Refer_Earn"></activity>
+        <activity android:name=".Edit_Profile_1" />
         <activity android:name=".Rate_Reviews" />
         <activity android:name=".Reviews" />
         <activity android:name=".EditProfile" />
