--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.20UIYoParker">
         <activity
+            android:name=".Wallets"
+            android:exported="true" />
+        <activity
             android:name=".Splash"
             android:exported="true" />
         <activity android:name=".Start" />
@@ -30,7 +33,7 @@
         <activity android:name=".Verification" />
         <activity android:name=".Phone" />
         <activity android:name=".Locations" />
-        <activity android:name=".Wallets">
+        <activity android:name=".Add_Card">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
