--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.20UIYoParker">
         <activity
+            android:name=".Rent_parking"
+            android:exported="true" />
+        <activity
             android:name=".Wallets"
             android:exported="true" />
         <activity
@@ -28,7 +31,6 @@
         <activity android:name=".Rate_Reviews" />
         <activity android:name=".Reviews" />
         <activity android:name=".EditProfile" />
-        <activity android:name=".BottomNavBar" />
         <activity android:name=".Success" />
         <activity android:name=".Verification" />
         <activity android:name=".Phone" />
