--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.20UIYoParker">
         <activity
-            android:name=".Rent_parking_1"
+            android:name=".Rent_parking_2"
             android:exported="true" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -19,10 +19,13 @@
         </intent-filter>
         </activity>
         <activity
-            android:name=".Upload_images"
+            android:name=".Rent_parking_1"
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".Upload_images"
+            android:exported="true"></activity>
         <activity
             android:name=".Rent_parking"
             android:exported="true">
